// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/atoms/Button Primary 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #51e9d2;
  -webkit-transform: skew(45deg);
  -ms-transform: skew(45deg);
  transform: skew(45deg);
  padding: 0.9rem 3.7rem;
  border: none;
  box-shadow: -5px 5px 14px 0px rgba(0,0,0,0.2);
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  font-family: montserrat;
  cursor: pointer;
  color: #fff;
}

.c1:hover {
  background-color: #55c4b3;
  color: #fff;
}

.c1:active {
  background-color: #55c4b3;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c1:disabled {
  background-color: $gray;
}

.c1:disabled,
.c1:disabled:hover {
  cursor: default;
}

.c2 {
  display: inline-block;
  font-size: 1.125rem;
  text-transform: uppercase;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-transform: skew(-45deg);
  -ms-transform: skew(-45deg);
  transform: skew(-45deg);
}

@media (max-width:540px) {
  .c1 {
    padding: 0.9rem 1rem;
    width: 88%;
    max-width: 88%;
  }
}

<div
  className="c0"
>
  <button
    className="c1"
    color="primary"
  >
    <span
      className="c2"
    >
      Primary Button
    </span>
  </button>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/atoms/Button Secondary 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #fff;
  -webkit-transform: skew(45deg);
  -ms-transform: skew(45deg);
  transform: skew(45deg);
  padding: 0.9rem 3.7rem;
  border: none;
  box-shadow: -5px 5px 14px 0px rgba(0,0,0,0.2);
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  font-family: montserrat;
  cursor: pointer;
  color: #21125e;
  box-shadow: inset 0px 0px 0px 3px #21125e;
  border-left: 1px solid #21125e;
  border-right: 1px solid #21125e;
}

.c1:hover {
  background-color: #21125e;
  color: #fff;
}

.c1:active {
  background-color: #190c4e;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c1:disabled {
  background-color: $gray;
}

.c1:disabled,
.c1:disabled:hover {
  cursor: default;
}

.c2 {
  display: inline-block;
  font-size: 1.125rem;
  text-transform: uppercase;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-transform: skew(-45deg);
  -ms-transform: skew(-45deg);
  transform: skew(-45deg);
}

@media (max-width:540px) {
  .c1 {
    padding: 0.9rem 1rem;
    width: 88%;
    max-width: 88%;
  }
}

<div
  className="c0"
>
  <button
    className="c1"
    color="secondary"
  >
    <span
      className="c2"
    >
      Secondary Button
    </span>
  </button>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/atoms/CreditCardIcon AMEX 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div />
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/atoms/CreditCardIcon DISCOVER 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div />
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/atoms/CreditCardIcon JCB 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div />
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/atoms/CreditCardIcon MAESTRO 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div />
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/atoms/CreditCardIcon MASTERCARD 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div />
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/atoms/CreditCardIcon VISA 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div />
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/atoms/Icon sample icon 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

<div
  className="c0"
>
  <svg
    height={32}
    viewBox="0 0 32 32"
    width={32}
  >
    <path
      d="M4.965 17.333h25.684c0.353 0 0.689-0.14 0.939-0.39s0.393-0.59 0.393-0.943-0.143-0.693-0.393-0.943c-0.25-0.25-0.586-0.39-0.939-0.39h-25.691l6.613-5.653c0.266-0.23 0.433-0.557 0.463-0.91 0.027-0.35-0.087-0.7-0.316-0.97-0.23-0.267-0.556-0.433-0.909-0.463-0.35-0.027-0.699 0.087-0.969 0.317l-9.354 8c-0.27 0.23-0.436 0.557-0.463 0.91-0.027 0.35 0.087 0.7 0.313 0.97 0.076 0.088 0.162 0.165 0.257 0.23l9.247 7.917c0.27 0.23 0.616 0.343 0.969 0.317s0.679-0.193 0.909-0.463c0.23-0.27 0.343-0.617 0.316-0.97s-0.193-0.68-0.463-0.91l-6.606-5.653z"
      fill="#949494"
    />
  </svg>
  <div
    className="c1"
  />
</div>
`;

exports[`Storyshots @components/atoms/IconButton edit icon button 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  padding: 0;
  padding-right: 0.5rem;
  margin: 0;
  display: inline-block;
  cursor: pointer;
}

.c1 svg {
  border-radius: 50%;
  border-width: 0;
  display: block;
  background-color: #fff;
}

.c1 svg:hover {
  background-color: #21125e;
}

.c1 svg:hover path {
  fill: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      height={36}
      viewBox="0 0 36 36"
      width={36}
    >
      <path
        d="M17.4391 14.3314L15.6955 16.0776C15.0531 16.7209 14.407 17.3643 13.7682 18.015C13.6177 18.1694 13.5039 18.3753 13.4599 18.5775C13.2286 19.6399 13.0047 20.7023 12.7808 21.7648L12.656 22.353C12.5972 22.6397 12.6743 22.9265 12.8689 23.1213C13.0194 23.2721 13.2286 23.3566 13.4489 23.3566C13.5113 23.3566 13.5737 23.3493 13.6361 23.3382L14.2822 23.2022C15.31 22.9853 16.3415 22.7647 17.3694 22.5515C17.608 22.5 17.8099 22.3934 17.9824 22.2206C20.8678 19.3274 23.7531 16.4379 26.6384 13.552C26.8513 13.3388 26.9688 13.0851 26.9982 12.7726C27.0018 12.7212 26.9982 12.6697 26.9871 12.6219C26.9688 12.5484 26.9541 12.4712 26.9357 12.3976C26.8954 12.2102 26.8513 11.9969 26.7632 11.7911C26.2236 10.5558 25.3279 9.67353 24.1018 9.17724C23.8559 9.07798 23.5952 9.04489 23.3676 9.01548L23.3052 9.00813C22.9748 8.96769 22.6738 9.07798 22.4132 9.34267C20.7613 11.0043 19.0984 12.6697 17.4391 14.3314ZM23.1841 9.89411C23.1914 9.89411 23.1951 9.89411 23.2024 9.89411L23.2649 9.90146C23.4557 9.92352 23.6319 9.94558 23.7714 10.0044C24.7699 10.4088 25.5041 11.1293 25.9483 12.144C25.9997 12.2616 26.0327 12.4124 26.0657 12.5704C26.0768 12.6293 26.0914 12.6881 26.1025 12.7469C26.0878 12.8131 26.0621 12.8572 26.0107 12.905C23.1217 15.7908 20.2364 18.6841 17.351 21.5736C17.3033 21.6214 17.2593 21.6435 17.1932 21.6582C16.1617 21.8751 15.1338 22.092 14.1023 22.3089L13.559 22.4228L13.6618 21.9412C13.8857 20.8825 14.1096 19.82 14.3372 18.7613C14.3446 18.7282 14.3739 18.6767 14.407 18.64C15.0457 17.9929 15.6844 17.3496 16.3269 16.7099L18.0705 14.9637C19.7334 13.2983 21.3964 11.633 23.0556 9.96396C23.1254 9.90514 23.1584 9.89411 23.1841 9.89411Z M10.428 13.0084H16.8374C17.087 13.0084 17.2889 12.8062 17.2889 12.5562C17.2889 12.3062 17.087 12.104 16.8374 12.104H10.428C9.63874 12.104 9 12.7474 9 13.5341V25.5702C9 26.3606 9.64241 27.0002 10.428 27.0002H22.4428C23.2321 27.0002 23.8708 26.3569 23.8708 25.5702V19.4124C23.8708 19.1624 23.6689 18.9602 23.4193 18.9602C23.1697 18.9602 22.9678 19.1624 22.9678 19.4124V25.5702C22.9678 25.8606 22.7292 26.0996 22.4392 26.0996H10.428C10.138 26.0996 9.89937 25.8606 9.89937 25.5702V13.5377C9.89937 13.2473 10.138 13.0084 10.428 13.0084Z"
        fill="#323232"
      />
    </svg>
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/atoms/IconButton trash icon button 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  padding: 0;
  padding-right: 0.5rem;
  margin: 0;
  display: inline-block;
  cursor: pointer;
}

.c1 svg {
  border-radius: 50%;
  border-width: 0;
  display: block;
  background-color: #fff;
}

.c1 svg:hover {
  background-color: #21125e;
}

.c1 svg:hover path {
  fill: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      height={36}
      viewBox="0 0 36 36"
      width={36}
    >
      <path
        d="M26.0095 11.5905H22.2644V10.9799C22.2644 9.88816 21.3762 9 20.2845 9H16.7245C15.6328 9 14.7447 9.88816 14.7447 10.9799V11.5905H10.9996C10.722 11.5905 10.5 11.8125 10.5 12.09C10.5 12.3676 10.722 12.5896 10.9996 12.5896H11.9025V24.3281C11.9025 25.801 13.1016 27 14.5744 27H22.4346C23.9075 27 25.1065 25.801 25.1065 24.3281V12.5896H26.0095C26.287 12.5896 26.509 12.3676 26.509 12.09C26.509 11.8125 26.287 11.5905 26.0095 11.5905ZM15.7438 10.9799C15.7438 10.4396 16.1842 9.99918 16.7245 9.99918H20.2845C20.8248 9.99918 21.2652 10.4396 21.2652 10.9799V11.5905H15.7438V10.9799ZM24.1073 24.3281C24.1073 25.2496 23.3561 26.0008 22.4346 26.0008H14.5744C13.653 26.0008 12.9017 25.2496 12.9017 24.3281V12.5896H24.111V24.3281H24.1073Z M18.5045 24.2108C18.782 24.2108 19.0041 23.9887 19.0041 23.7112V14.8814C19.0041 14.6039 18.782 14.3818 18.5045 14.3818C18.2269 14.3818 18.0049 14.6039 18.0049 14.8814V23.7075C18.0049 23.985 18.2269 24.2108 18.5045 24.2108Z M15.2447 23.6595C15.5223 23.6595 15.7443 23.4375 15.7443 23.16V15.4293C15.7443 15.1517 15.5223 14.9297 15.2447 14.9297C14.9672 14.9297 14.7451 15.1517 14.7451 15.4293V23.16C14.7451 23.4375 14.9709 23.6595 15.2447 23.6595Z M21.7652 23.6595C22.0428 23.6595 22.2648 23.4375 22.2648 23.16V15.4293C22.2648 15.1517 22.0428 14.9297 21.7652 14.9297C21.4877 14.9297 21.2656 15.1517 21.2656 15.4293V23.16C21.2656 23.4375 21.4877 23.6595 21.7652 23.6595Z"
        fill="#323232"
      />
    </svg>
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/atoms/Loader default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  padding: 1rem 0;
}

.c2 {
  position: relative;
  width: 5rem;
  height: 1rem;
  margin: 0 auto;
}

.c2 span {
  background-color: #21125e;
  width: 1rem;
  height: 1rem;
  border-radius: 1rem;
  position: absolute;
}

.c2 span:nth-child(1) {
  left: 0;
  -webkit-animation: hKcKTr 2s infinite;
  animation: hKcKTr 2s infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c2 span:nth-child(2) {
  left: 2rem;
  -webkit-animation: jcXNMq 2s infinite;
  animation: jcXNMq 2s infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.c2 span:nth-child(3) {
  right: 0;
  -webkit-animation: ggvZqn 2s infinite;
  animation: ggvZqn 2s infinite;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span />
      <span />
      <span />
    </div>
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/atoms/Message error 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  width: 25rem;
  padding: 1.5rem;
  background-color: #fff;
  box-shadow: 0px 6px 15px 3px rgba(0,0,0,0.25);
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  border-left: 0.3rem solid;
  border-color: #c22d74;
}

.c2 {
  text-transform: uppercase;
  font-weight: 600;
  margin: 0 1.5rem 0 0;
}

.c3 {
  cursor: pointer;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 1.5rem;
}

.c3 path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c3:hover path {
  fill: #51e9d2;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      Sample Message
    </p>
    <button
      className="c3"
      onClick={[Function]}
    >
      <svg
        height={15}
        viewBox="0 0 15 15"
        width={15}
      >
        <path
          d="M8.48534 7.07101L14.1421 1.41421L12.7279 0L7.07112 5.6568L1.41435 2.89679e-05L0.00013864 1.41424L5.65691 7.07101L0 12.7279L1.41421 14.1421L7.07112 8.48523L12.7281 14.1422L14.1423 12.728L8.48534 7.07101Z"
          fill="#c4c4c4"
        />
      </svg>
    </button>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`Storyshots @components/atoms/Message neutral 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  width: 25rem;
  padding: 1.5rem;
  background-color: #fff;
  box-shadow: 0px 6px 15px 3px rgba(0,0,0,0.25);
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  border-left: 0.3rem solid;
  border-color: #55c4b3;
}

.c2 {
  text-transform: uppercase;
  font-weight: 600;
  margin: 0 1.5rem 0 0;
}

.c3 {
  cursor: pointer;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 1.5rem;
}

.c3 path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c3:hover path {
  fill: #51e9d2;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      Sample Message
    </p>
    <button
      className="c3"
      onClick={[Function]}
    >
      <svg
        height={15}
        viewBox="0 0 15 15"
        width={15}
      >
        <path
          d="M8.48534 7.07101L14.1421 1.41421L12.7279 0L7.07112 5.6568L1.41435 2.89679e-05L0.00013864 1.41424L5.65691 7.07101L0 12.7279L1.41421 14.1421L7.07112 8.48523L12.7281 14.1422L14.1423 12.728L8.48534 7.07101Z"
          fill="#c4c4c4"
        />
      </svg>
    </button>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`Storyshots @components/atoms/Message success 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  width: 25rem;
  padding: 1.5rem;
  background-color: #fff;
  box-shadow: 0px 6px 15px 3px rgba(0,0,0,0.25);
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  border-left: 0.3rem solid;
  border-color: #3ed256;
}

.c2 {
  text-transform: uppercase;
  font-weight: 600;
  margin: 0 1.5rem 0 0;
}

.c3 {
  cursor: pointer;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 1.5rem;
}

.c3 path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c3:hover path {
  fill: #51e9d2;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      Sample Message
    </p>
    <button
      className="c3"
      onClick={[Function]}
    >
      <svg
        height={15}
        viewBox="0 0 15 15"
        width={15}
      >
        <path
          d="M8.48534 7.07101L14.1421 1.41421L12.7279 0L7.07112 5.6568L1.41435 2.89679e-05L0.00013864 1.41424L5.65691 7.07101L0 12.7279L1.41421 14.1421L7.07112 8.48523L12.7281 14.1422L14.1423 12.728L8.48534 7.07101Z"
          fill="#c4c4c4"
        />
      </svg>
    </button>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`Storyshots @components/atoms/RichTextContent custom 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p><strong>bold</strong></p>
<p><em>italic</em></p>
<p><del>strikethrough</del></p>
<h1>h1</h1>
<h2>h2</h2>
<h3>h3</h3>
<blockquote>blockquote</blockquote>
<ul>
<li>ul</li>
</ul>
<ol>
<li>ol</li>
</ol>
<p><a href=\\"#\\" target=\\"_self\\">link</a></p>
",
      }
    }
  />
  <div
    className="c1"
  />
</div>
`;

exports[`Storyshots @components/atoms/RichTextContent default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>They say polo is the sport of kings.Or was that stamp collecting ? Either way, this shirt is fit for a king of Saturday night.</p>
",
      }
    }
  />
  <div
    className="c1"
  />
</div>
`;

exports[`Storyshots @components/atoms/SocialMediaIcon sample medium 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  padding: 1rem NaNrem;
}

.c2 path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c2:hover path {
  fill: #51e9d2;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <a
      aria-label="facebook"
      className="c2"
      href="https://www.facebook.com/mirumeelabs/"
      target="_blank"
    >
      <svg
        height={36}
        viewBox="0 0 36 36"
        width={36}
      >
        <path
          d="M16 0c-8.822 0-16 7.178-16 16s7.178 16 16 16c8.822 0 16-7.178 16-16s-7.177-16-16-16zM19.979 16.563h-2.603c0 4.159 0 9.278 0 9.278h-3.857c0 0 0-5.070 0-9.278h-1.834v-3.279h1.834v-2.121c0-1.519 0.722-3.893 3.893-3.893l2.858 0.011v3.183c0 0-1.737 0-2.075 0s-0.818 0.169-0.818 0.893v1.927h2.939l-0.337 3.279z"
          fill="#21125e"
        />
      </svg>
    </a>
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/atoms/Tile default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #f1f5f5;
  border: 1px transparent solid;
  padding: 0;
}

.c2 {
  border-bottom: 2px solid #c4c4c4;
}

.c3 {
  padding: 1rem 1.25rem;
}

.c4 {
  padding: 0 1rem;
  margin-bottom: 1rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <h3>
          This is header
        </h3>
      </div>
    </div>
    <div
      className="c3"
    >
      <div>
        This is body
      </div>
    </div>
    <div
      className="c4"
    />
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/atoms/Tile with hover 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c5 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #f1f5f5;
  border: 1px transparent solid;
  padding: 0;
}

.c1:hover {
  cursor: pointer;
  border-color: #190c4e;
}

.c2 {
  border-bottom: 2px solid #c4c4c4;
}

.c3 {
  padding: 1rem 1.25rem;
}

.c4 {
  padding: 0 1rem;
  margin-bottom: 1rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <h3>
          This is header
        </h3>
      </div>
    </div>
    <div
      className="c3"
    >
      <div>
        This is body
      </div>
    </div>
    <div
      className="c4"
    >
      <p>
        And this is footer
      </p>
    </div>
  </div>
  <div
    className="c5"
  />
</div>
`;

exports[`Storyshots @components/molecules/CreditCardNumberWithIcon default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
}

.c2 {
  padding: 0 1rem;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div />
    </div>
    <span
      className="c2"
    >
      XXXX XXXX XXXX 
      1234
    </span>
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/molecules/CreditCardTile default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c10 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c4 {
  display: inline-block;
  vertical-align: middle;
}

.c9 {
  padding: 0;
  padding-right: 0.5rem;
  margin: 0;
  display: inline-block;
  cursor: pointer;
}

.c9 svg {
  border-radius: 50%;
  border-width: 0;
  display: block;
  background-color: #fff;
}

.c9 svg:hover {
  background-color: #21125e;
}

.c9 svg:hover path {
  fill: #fff;
}

.c1 {
  background-color: #f1f5f5;
  border: 1px transparent solid;
  padding: 0;
}

.c2 {
  border-bottom: 2px solid #c4c4c4;
}

.c3 {
  padding: 1rem 1.25rem;
}

.c8 {
  padding: 0 1rem;
  margin-bottom: 1rem;
}

.c5 {
  padding: 0 1rem;
}

.c6 {
  font-weight: 600;
}

.c7 {
  margin-top: 0.5rem;
  margin-bottom: 1rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div>
          <div
            className="c4"
          >
            <div />
          </div>
          <span
            className="c5"
          >
            XXXX XXXX XXXX 
            9876
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3"
    >
      <div
        className="c6"
      >
        Expires on
      </div>
      <div
        className="c7"
      >
        05/2019
      </div>
      <div
        className="c6"
      >
        Name on card
      </div>
      <div
        className="c7"
      >
        John Doe
      </div>
    </div>
    <div
      className="c8"
    >
      <span>
        <div
          className="c9"
          onClick={[Function]}
        >
          <svg
            height={36}
            viewBox="0 0 36 36"
            width={36}
          >
            <path
              d="M17.4391 14.3314L15.6955 16.0776C15.0531 16.7209 14.407 17.3643 13.7682 18.015C13.6177 18.1694 13.5039 18.3753 13.4599 18.5775C13.2286 19.6399 13.0047 20.7023 12.7808 21.7648L12.656 22.353C12.5972 22.6397 12.6743 22.9265 12.8689 23.1213C13.0194 23.2721 13.2286 23.3566 13.4489 23.3566C13.5113 23.3566 13.5737 23.3493 13.6361 23.3382L14.2822 23.2022C15.31 22.9853 16.3415 22.7647 17.3694 22.5515C17.608 22.5 17.8099 22.3934 17.9824 22.2206C20.8678 19.3274 23.7531 16.4379 26.6384 13.552C26.8513 13.3388 26.9688 13.0851 26.9982 12.7726C27.0018 12.7212 26.9982 12.6697 26.9871 12.6219C26.9688 12.5484 26.9541 12.4712 26.9357 12.3976C26.8954 12.2102 26.8513 11.9969 26.7632 11.7911C26.2236 10.5558 25.3279 9.67353 24.1018 9.17724C23.8559 9.07798 23.5952 9.04489 23.3676 9.01548L23.3052 9.00813C22.9748 8.96769 22.6738 9.07798 22.4132 9.34267C20.7613 11.0043 19.0984 12.6697 17.4391 14.3314ZM23.1841 9.89411C23.1914 9.89411 23.1951 9.89411 23.2024 9.89411L23.2649 9.90146C23.4557 9.92352 23.6319 9.94558 23.7714 10.0044C24.7699 10.4088 25.5041 11.1293 25.9483 12.144C25.9997 12.2616 26.0327 12.4124 26.0657 12.5704C26.0768 12.6293 26.0914 12.6881 26.1025 12.7469C26.0878 12.8131 26.0621 12.8572 26.0107 12.905C23.1217 15.7908 20.2364 18.6841 17.351 21.5736C17.3033 21.6214 17.2593 21.6435 17.1932 21.6582C16.1617 21.8751 15.1338 22.092 14.1023 22.3089L13.559 22.4228L13.6618 21.9412C13.8857 20.8825 14.1096 19.82 14.3372 18.7613C14.3446 18.7282 14.3739 18.6767 14.407 18.64C15.0457 17.9929 15.6844 17.3496 16.3269 16.7099L18.0705 14.9637C19.7334 13.2983 21.3964 11.633 23.0556 9.96396C23.1254 9.90514 23.1584 9.89411 23.1841 9.89411Z M10.428 13.0084H16.8374C17.087 13.0084 17.2889 12.8062 17.2889 12.5562C17.2889 12.3062 17.087 12.104 16.8374 12.104H10.428C9.63874 12.104 9 12.7474 9 13.5341V25.5702C9 26.3606 9.64241 27.0002 10.428 27.0002H22.4428C23.2321 27.0002 23.8708 26.3569 23.8708 25.5702V19.4124C23.8708 19.1624 23.6689 18.9602 23.4193 18.9602C23.1697 18.9602 22.9678 19.1624 22.9678 19.4124V25.5702C22.9678 25.8606 22.7292 26.0996 22.4392 26.0996H10.428C10.138 26.0996 9.89937 25.8606 9.89937 25.5702V13.5377C9.89937 13.2473 10.138 13.0084 10.428 13.0084Z"
              fill="#323232"
            />
          </svg>
        </div>
      </span>
      <span>
        <div
          className="c9"
          onClick={[Function]}
        >
          <svg
            height={36}
            viewBox="0 0 36 36"
            width={36}
          >
            <path
              d="M26.0095 11.5905H22.2644V10.9799C22.2644 9.88816 21.3762 9 20.2845 9H16.7245C15.6328 9 14.7447 9.88816 14.7447 10.9799V11.5905H10.9996C10.722 11.5905 10.5 11.8125 10.5 12.09C10.5 12.3676 10.722 12.5896 10.9996 12.5896H11.9025V24.3281C11.9025 25.801 13.1016 27 14.5744 27H22.4346C23.9075 27 25.1065 25.801 25.1065 24.3281V12.5896H26.0095C26.287 12.5896 26.509 12.3676 26.509 12.09C26.509 11.8125 26.287 11.5905 26.0095 11.5905ZM15.7438 10.9799C15.7438 10.4396 16.1842 9.99918 16.7245 9.99918H20.2845C20.8248 9.99918 21.2652 10.4396 21.2652 10.9799V11.5905H15.7438V10.9799ZM24.1073 24.3281C24.1073 25.2496 23.3561 26.0008 22.4346 26.0008H14.5744C13.653 26.0008 12.9017 25.2496 12.9017 24.3281V12.5896H24.111V24.3281H24.1073Z M18.5045 24.2108C18.782 24.2108 19.0041 23.9887 19.0041 23.7112V14.8814C19.0041 14.6039 18.782 14.3818 18.5045 14.3818C18.2269 14.3818 18.0049 14.6039 18.0049 14.8814V23.7075C18.0049 23.985 18.2269 24.2108 18.5045 24.2108Z M15.2447 23.6595C15.5223 23.6595 15.7443 23.4375 15.7443 23.16V15.4293C15.7443 15.1517 15.5223 14.9297 15.2447 14.9297C14.9672 14.9297 14.7451 15.1517 14.7451 15.4293V23.16C14.7451 23.4375 14.9709 23.6595 15.2447 23.6595Z M21.7652 23.6595C22.0428 23.6595 22.2648 23.4375 22.2648 23.16V15.4293C22.2648 15.1517 22.0428 14.9297 21.7652 14.9297C21.4877 14.9297 21.2656 15.1517 21.2656 15.4293V23.16C21.2656 23.4375 21.4877 23.6595 21.7652 23.6595Z"
              fill="#323232"
            />
          </svg>
        </div>
      </span>
    </div>
  </div>
  <div
    className="c10"
  />
</div>
`;
